--- a/jisseki.css
+++ b/jisseki.css
@@ -17,9 +17,9 @@ figure,img{
 header,footer,nav,section{display:block;}
 
 html{
-	font:14px/1.3 "ヒラギノ角ゴ Pro W3";
-	-webkit-text-size-adjust:100%;
-	background-image:url("./animal.jpg");
+	font:14px/1.3 "ヒラギノ丸ゴ ProN","arial black";
+	webkit-text-size-adjust:100%;
+	background-color:rgb(0,206,209);
 }
 li{list-style:none;
 }
@@ -30,11 +30,11 @@ li{list-style:none;
 body{
 /*	background-image:url("./animal.jpg");
 	background-image:url("./IMG_7101.JPG");*/
-	color:rgb(255,0,0);
+	color:rgb(0,0,0);
 	width:100%;
 	/* max-width: 750px; */
 	margin: 0;
-	font-family: "メイリオ", "Meiryo", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Verdana, "ＭＳ Ｐゴシック", "MS PGothic", Arial, sans-serif;
+	font-family: "ヒラギノ丸ゴ ProN","arial black";
 	text-align: center;
 	-webkit-text-size-adjust: 100%;
 }
@@ -90,7 +90,6 @@ h1 span{
 
 h1 a{
 	font-size:24px;
-	color:rgb(255,165,0);
 }
 
 .left_link{
