--- a/jisseki.css
+++ b/jisseki.css
@@ -37,7 +37,7 @@ body{
 	font-family: "ヒラギノ丸ゴ ProN","arial black";
 	text-align: center;
 	webkit-text-size-adjust: 100%;
-	font-weight:900;
+	font-weight:bolder;
 }
 
 /* リンク色変更はここ */
