--- a/jisseki.css
+++ b/jisseki.css
@@ -19,7 +19,8 @@ header,footer,nav,section{display:block;}
 html{
 	font:14px/1.3 "ヒラギノ丸ゴ ProN","arial black";
 	webkit-text-size-adjust:100%;
-	background-color:rgb(0,191,255);
+	background-color:rgb(250,235,215)
+;
 }
 li{list-style:none;
 }
@@ -42,7 +43,7 @@ body{
 
 /* リンク色変更はここ */
 a{
-	color:rgb(0,0,128);
+	color:rgb(250,235,215);
 	font-weight:bold;
 	text-decoration:none;
 }
@@ -247,7 +248,7 @@ address{
 }
 
 address a{
-	color:rgb(0,0,128);
+	color:rgb(250,235,215);
 }
 
 
