--- a/jisseki.css
+++ b/jisseki.css
@@ -19,8 +19,7 @@ header,footer,nav,section{display:block;}
 html{
 	font:14px/1.3 "ヒラギノ丸ゴ ProN","arial black";
 	webkit-text-size-adjust:100%;
-	background-color:rgb(250,235,215)
-;
+	background-color:rgb(250,235,200);
 }
 li{list-style:none;
 }
@@ -31,7 +30,6 @@ li{list-style:none;
 body{
 /*	background-image:url("./animal.jpg");
 	background-image:url("./IMG_7101.JPG");*/
-	color:rgb(0,0,0);
 	width:100%;
 	/* max-width: 750px; */
 	margin: 0;
@@ -43,7 +41,6 @@ body{
 
 /* リンク色変更はここ */
 a{
-	color:rgb(250,235,215);
 	font-weight:bold;
 	text-decoration:none;
 }
@@ -248,7 +245,6 @@ address{
 }
 
 address a{
-	color:rgb(250,235,215);
 }
 
 
@@ -310,14 +306,14 @@ address a{
 	padding-left:3px;
 	border-left:solid 3px #7F827D;
 	font-size:16px;
-	color:rgb(255,165,0);}
+}
 
 .boxes h3 a span{
 	margin-top:1%;
 	display:block;
 	font-size:12px;
 	font-weight:normal;
-	color:rgb(255,165,0);}
+}
 
 
 /* フッタ-カテゴリリンク群
@@ -346,7 +342,6 @@ address a{
 }
 
 #pan a{
-	color:rgb(255,165,0);
 }
 
 /* 当たり情報
@@ -565,7 +560,6 @@ address a{
 	margin:4% 3% 3%;
 	padding:2%;
 	border-left:solid 4px #7F827D;
-	color:rgb(255,165,0);
 }
 
 #img_bg{
