--- a/index.css
+++ b/index.css
@@ -1,12 +1,9 @@
 @charset "UTF-8";
 
-html{
+html,body{
 	font:14px/1.3 "ヒラギノ丸ゴ ProN","arial black";
 	webkit-text-size-adjust:100%;
 	background-color:rgb(250,235,200);
-}
-
-body{
 }
 
 a{
