--- a/jisseki.css
+++ b/jisseki.css
@@ -62,6 +62,9 @@ a{
 	padding:0 0 0 0;
 	overflow:hidden;
 	border-bottom:solid 2px #333631;
+	position:fixed;
+	z-index:100;
+	top:0;
 	/*
 	position:relative;
 	position:fixed;
@@ -72,7 +75,7 @@ a{
 	margin-left:-375px;
 	width:750px;
 	*/
-	height:60px;
+	height:50px;
 	text-align: center;
 }
 
@@ -335,7 +338,7 @@ address a{
 /* パンくず
 --------------------*/
 #pan{
-	margin:0;
+	margin-top:50px;
 	padding:2% 4% 2% 0;
 	border:solid #333631;
 	border-width:0 0 1px;
